# lab

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  appveyor.yml
.circleci/: config.yml
benches/: bench.rs  lab_to_rgb.rs  rgb_to_lab.rs
src/: approx_impl.rs  avx.rs  lib.rs
src/avx/: labs_to_rgbs.rs  mod.rs  rgbs_to_labs.rs
src/simd/: approx_impl.rs  labs_to_rgbs.rs  math.rs  mod.rs  powf.rs  rgbs_to_labs.rs
tools/: srgb-matrices.py
