[package]
name = "lab"
version = "0.6.0" # bump html_root_url attribute in lib.rs
authors = ["Jesse Bees <jesse@toomanybees.com>"]
description = """
Tools for converting RGB colors to the CIE-L*a*b* color space, and
comparing differences in color.
"""
homepage = "https://github.com/TooManyBees/lab"
repository = "https://github.com/TooManyBees/lab"
documentation = "https://docs.rs/lab"
readme = "README.md"
keywords = ["lab", "color", "pixel", "rgb"]
categories = ["multimedia::images", "multimedia::video"]
license = "MIT"

[lib]
bench = false

[dev-dependencies]
rand = "0.5"
criterion = { version = "0.2", default-features = false }
lazy_static = "*"
pretty_assertions = "0.5"

[[bench]]
name = "rgb_to_lab"
harness = false

[[bench]]
name = "lab_to_rgb"
harness = false
